[gd_scene load_steps=4 format=2]

[ext_resource path="res://GameEntry.gd" type="Script" id=1]
[ext_resource path="res://FontBase.tres" type="DynamicFont" id=2]

[sub_resource type="Theme" id=1]

[node name="GameEntry" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Connector" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )

[node name="Create_server" type="Button" parent="Connector"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -50.0
margin_right = 100.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 2 )
text = "Create server"

[node name="Join_server" type="Button" parent="Connector"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 80.0
margin_right = 146.0
margin_bottom = 180.0
custom_fonts/font = ExtResource( 2 )
text = "Join server"

[node name="Server_ip" type="LineEdit" parent="Connector"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -210.0
margin_top = 350.0
margin_right = 240.0
margin_bottom = 425.0
custom_fonts/font = ExtResource( 2 )
placeholder_text = "Enter IP"

[node name="CanvasLayer" type="CanvasLayer" parent="Connector"]

[node name="Device_ip" type="Label" parent="Connector/CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -150.0
custom_fonts/font = ExtResource( 2 )

[connection signal="pressed" from="Connector/Create_server" to="." method="_on_Create_server_pressed"]
[connection signal="pressed" from="Connector/Join_server" to="." method="_on_Join_server_pressed"]
